WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119978
[EFL] minor method name fix for the textTrackOffMenuItemText method
https://bugs.webkit.org/show_bug.cgi?id=119978
Summary
[EFL] minor method name fix for the textTrackOffMenuItemText method
Danilo de Paula
Reported
2013-08-18 05:39:16 PDT
the method textTrackOffText was renamed totextTrackOffMenuItemText in
https://bugs.webkit.org/show_bug.cgi?id=113822
The way it is now it breaks the build for
https://bugs.webkit.org/show_bug.cgi?id=117649
Attachments
Patch
(1.38 KB, patch)
2013-08-18 05:41 PDT
,
Danilo de Paula
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Danilo de Paula
Comment 1
2013-08-18 05:41:18 PDT
Created
attachment 209027
[details]
Patch
Chris Dumez
Comment 2
2013-08-18 06:20:00 PDT
Comment on
attachment 209027
[details]
Patch r=me
Danilo de Paula
Comment 3
2013-08-18 06:23:02 PDT
Comment on
attachment 209027
[details]
Patch Thanks, I wasn't expecting to get a r+ on a sunday! Would you mind to give me a cq+ as well? thanks
WebKit Commit Bot
Comment 4
2013-08-18 07:13:39 PDT
The commit-queue encountered the following flaky tests while processing
attachment 209027
[details]
: compositing/visibility/visibility-simple-video-layer.html
bug 105399
(authors:
rniwa@webkit.org
,
shawnsingh@chromium.org
, and
simon.fraser@apple.com
) fast/workers/termination-with-port-messages.html
bug 119980
(authors:
dimich@chromium.org
and
rniwa@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2013-08-18 07:15:00 PDT
Comment on
attachment 209027
[details]
Patch Clearing flags on attachment: 209027 Committed
r154247
: <
http://trac.webkit.org/changeset/154247
>
WebKit Commit Bot
Comment 6
2013-08-18 07:15:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug