[EFL] minor method name fix for the textTrackOffMenuItemText method https://bugs.webkit.org/show_bug.cgi?id=119978

the method textTrackOffMenuItemText was renamed in
https://bugs.webkit.org/show_bug.cgi?id=113822

Patch by Danilo Cesar Lemes de Paula <danilo.cesar@collabora.co.uk> on 2013-08-18
Reviewed by Christophe Dumez.

* platform/efl/LocalizedStringsEfl.cpp:
(WebCore::textTrackOffMenuItemText):

Canonical link: https://commits.webkit.org/137914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154247 268f45cc-cd09-0410-ab3c-d52691b4dbfc